<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:layout_margin="20dp"
            android:text="Fitbit App"
            android:textSize="32sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/fitbit_login_btn"
            android:text="@string/fitbit_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/fitbit_data_btn"
            android:text="@string/fitbit_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/fitbit_logout_btn"
            android:text="@string/fitbit_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_margin="20dp"
            android:text="Strava App"
            android:textSize="32sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/strava_login_btn"
            android:text="@string/strava_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/strava_data_btn"
            android:text="@string/strava_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/strava_logout_btn"
            android:text="@string/strava_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_margin="20dp"
            android:text="GoogleFit App"
            android:textSize="32sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/google_fitlogin_btn"
            android:text="@string/google_fit_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/google_fitdata_btn"
            android:text="@string/google_fit_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/google_fitlogout_btn"
            android:text="@string/google_fit_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>